@@ -10,30 +10,22 @@ constexpr int GAME_PHASE_BONUS[NPIECE_TYPES] = {
 		0, 1, 1, 2, 4, 0
 };
 
-constexpr Score PIECE_VALUES[] = {S(107, 79), S(408, 304), S(395, 303), S(533, 556), S(1265, 938), S(0, 0)};
-constexpr Score PAWN_TABLE[] = {S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(107, 171), S(143, 147), S(86, 138), S(136, 102), S(100, 119), S(179, 87), S(13, 152), S(-38, 190), S(-5, 94), S(-6, 90), S(23, 69), S(30, 45), S(67, 23), S(80, 29), S(19, 63), S(-12, 76), S(-18, 35), S(2, 18), S(2, 11), S(27, -13), S(28, -7), S(18, 1), S(12, 8), S(-20, 19), S(-32, 19), S(-24, 10), S(-0, -2), S(18, -13), S(24, -9), S(17, -8), S(-2, -2), S(-24, 4), S(-21, 6), S(-25, 6), S(-3, -4), S(-3, 3), S(12, 3), S(17, -4), S(24, -12), S(-2, -7), S(-29, 21), S(-17, 7), S(-25, 18), S(-14, 19), S(-6, 18), S(35, 1), S(33, -9), S(-11, -4), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0)};
-constexpr Score KNIGHT_TABLE[] = {S(-208, -33), S(-116, -23), S(-51, 7), S(-52, -12), S(86, -28), S(-111, -10), S(-21, -59), S(-119, -88), S(-94, -7), S(-53, 10), S(87, -19), S(30, 15), S(24, 5), S(80, -20), S(-0, -11), S(-18, -41), S(-43, -16), S(72, -11), S(51, 24), S(80, 22), S(113, 1), S(157, -6), S(100, -15), S(62, -40), S(0, -7), S(37, 13), S(29, 41), S(75, 35), S(55, 35), S(95, 21), S(39, 17), S(39, -11), S(-0, -8), S(23, 3), S(39, 27), S(31, 39), S(50, 29), S(41, 28), S(40, 15), S(6, -9), S(-11, -18), S(6, 9), S(33, 4), S(39, 21), S(51, 18), S(45, -2), S(44, -13), S(-0, -22), S(-9, -42), S(-38, -12), S(6, 2), S(27, 2), S(30, 7), S(43, -14), S(0, -18), S(3, -44), S(-121, -10), S(1, -38), S(-36, -10), S(-13, -3), S(15, -15), S(-4, -12), S(5, -39), S(-15, -72)};
-constexpr Score BISHOP_TABLE[] = {S(-34, -2), S(-9, -9), S(-144, 18), S(-90, 12), S(-66, 19), S(-59, 9), S(-32, 5), S(-1, -14), S(-37, 11), S(-2, 3), S(-35, 16), S(-51, 4), S(17, 3), S(50, -3), S(4, 4), S(-58, 2), S(-21, 14), S(31, -1), S(35, 1), S(28, -1), S(26, 0), S(56, 2), S(32, 6), S(2, 13), S(-3, 5), S(10, 11), S(11, 14), S(48, 7), S(34, 9), S(26, 8), S(12, 2), S(5, 10), S(4, -3), S(19, 3), S(11, 11), S(31, 13), S(37, -1), S(7, 5), S(12, -2), S(21, -7), S(14, -10), S(29, -2), S(28, 6), S(15, 6), S(23, 11), S(44, -5), S(29, -2), S(22, -13), S(22, -12), S(39, -22), S(29, -8), S(16, 2), S(25, -0), S(35, -4), S(58, -27), S(19, -28), S(-19, -11), S(20, -3), S(15, 1), S(8, 2), S(11, 2), S(10, 5), S(-24, 7), S(-8, -11)};
-constexpr Score ROOK_TABLE[] = {S(20, 21), S(34, 14), S(-4, 30), S(53, 12), S(47, 17), S(-24, 29), S(-3, 24), S(19, 16), S(23, 20), S(17, 24), S(64, 12), S(70, 10), S(93, -9), S(85, 2), S(14, 22), S(42, 12), S(-21, 22), S(4, 20), S(6, 17), S(13, 17), S(-10, 17), S(43, 2), S(73, -4), S(8, 7), S(-33, 21), S(-29, 19), S(-11, 27), S(7, 11), S(0, 14), S(24, 10), S(-14, 10), S(-28, 18), S(-48, 22), S(-33, 22), S(-15, 21), S(-14, 17), S(2, 8), S(-12, 8), S(9, 2), S(-35, 9), S(-40, 12), S(-21, 14), S(-8, 4), S(-11, 10), S(8, 1), S(6, -0), S(-0, 4), S(-26, -2), S(-31, 6), S(-8, 6), S(-7, 9), S(6, 11), S(18, -2), S(23, -2), S(10, -4), S(-52, 10), S(-1, 5), S(4, 9), S(23, 5), S(33, 0), S(35, -6), S(25, -1), S(-13, 9), S(2, -11)};
-constexpr Score QUEEN_TABLE[] = {S(-30, 1), S(-29, 47), S(-16, 45), S(-8, 40), S(110, -10), S(105, -14), S(76, -9), S(57, 33), S(-29, 0), S(-58, 29), S(-20, 37), S(-13, 50), S(-51, 82), S(59, 17), S(19, 37), S(63, 13), S(-5, -23), S(-24, 2), S(5, -18), S(-20, 55), S(23, 36), S(70, 17), S(58, 17), S(63, 23), S(-37, 24), S(-28, 17), S(-26, 14), S(-24, 24), S(-9, 45), S(-1, 45), S(-6, 78), S(-0, 68), S(1, -28), S(-33, 30), S(-2, -8), S(-13, 32), S(-1, 8), S(0, 22), S(0, 53), S(3, 42), S(-12, 9), S(14, -40), S(2, -2), S(16, -33), S(10, -8), S(13, 8), S(20, 22), S(9, 42), S(-16, -14), S(11, -36), S(28, -38), S(28, -40), S(39, -49), S(43, -40), S(15, -40), S(29, -29), S(20, -34), S(21, -53), S(31, -46), S(36, -6), S(19, -13), S(-2, -20), S(-4, -8), S(-37, -29)};
-constexpr Score KING_TABLE[] = {S(-99, -78), S(181, -72), S(179, -56), S(102, -45), S(-151, 13), S(-82, 30), S(51, -6), S(58, -28), S(227, -59), S(67, 4), S(37, 9), S(109, -1), S(31, 14), S(42, 34), S(-31, 30), S(-147, 38), S(73, -6), S(73, 11), S(94, 11), S(15, 16), S(38, 14), S(111, 35), S(130, 28), S(-7, 10), S(13, -19), S(-14, 24), S(12, 27), S(-52, 40), S(-56, 38), S(-60, 47), S(-22, 34), S(-95, 16), S(-93, -8), S(12, -5), S(-74, 37), S(-134, 50), S(-139, 54), S(-94, 42), S(-87, 24), S(-106, 2), S(-6, -25), S(-20, 1), S(-58, 23), S(-97, 38), S(-95, 42), S(-83, 34), S(-34, 14), S(-50, -4), S(0, -36), S(5, -12), S(-44, 16), S(-100, 28), S(-78, 28), S(-54, 18), S(0, -4), S(9, -26), S(-26, -65), S(42, -49), S(12, -26), S(-93, 2), S(-13, -21), S(-48, -5), S(32, -38), S(18, -63)};
-
-constexpr Score SEMI_OPEN_FILE_BONUS[NPIECE_TYPES] = {
-		Score(0, 0), Score(0, 0), Score(0, 0), Score(15, 15), Score(0, 0), Score(0, 0),
-};
-constexpr Score OPEN_FILE_BONUS[NPIECE_TYPES] = {
-		Score(0, 0), Score(0, 0), Score(0, 0), Score(30, 30), Score(0, 0), Score(0, 0),
-};
-
+constexpr Score PIECE_VALUES[] = {S(111, 80), S(416, 307), S(402, 306), S(533, 565), S(1293, 944), S(0, 0)};
+constexpr Score PAWN_TABLE[] = {S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(119, 173), S(146, 149), S(89, 140), S(145, 103), S(104, 120), S(186, 87), S(12, 155), S(-24, 191), S(3, 94), S(-6, 91), S(26, 70), S(35, 46), S(70, 23), S(85, 29), S(18, 64), S(-4, 76), S(-10, 34), S(1, 19), S(3, 11), S(28, -12), S(29, -7), S(21, 0), S(11, 8), S(-14, 18), S(-27, 18), S(-25, 11), S(-2, -1), S(17, -13), S(23, -9), S(19, -8), S(-2, -2), S(-20, 3), S(-18, 6), S(-27, 6), S(-5, -4), S(-5, 3), S(10, 3), S(18, -4), S(23, -12), S(0, -8), S(-29, 22), S(-20, 8), S(-27, 19), S(-16, 19), S(-9, 19), S(36, 1), S(32, -9), S(-11, -3), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0), S(0, 0)};
+constexpr Score KNIGHT_TABLE[] = {S(-204, -34), S(-115, -22), S(-55, 9), S(-50, -11), S(86, -27), S(-109, -10), S(-23, -58), S(-117, -89), S(-94, -7), S(-55, 12), S(89, -19), S(31, 16), S(25, 5), S(84, -20), S(-3, -10), S(-19, -40), S(-48, -15), S(74, -11), S(52, 25), S(83, 23), S(114, 2), S(162, -5), S(101, -14), S(64, -41), S(3, -7), S(39, 14), S(31, 42), S(77, 35), S(59, 36), S(98, 22), S(42, 17), S(42, -11), S(0, -8), S(26, 4), S(41, 28), S(33, 41), S(52, 30), S(44, 30), S(43, 16), S(8, -8), S(-10, -18), S(8, 10), S(34, 5), S(41, 22), S(54, 19), S(47, -0), S(47, -11), S(1, -21), S(-11, -41), S(-36, -12), S(7, 3), S(28, 4), S(31, 8), S(42, -12), S(2, -17), S(4, -41), S(-121, -8), S(-2, -38), S(-37, -8), S(-17, -1), S(13, -13), S(-3, -11), S(3, -38), S(-12, -71)};
+constexpr Score BISHOP_TABLE[] = {S(-28, -2), S(-6, -9), S(-145, 19), S(-89, 13), S(-66, 20), S(-57, 9), S(-31, 5), S(2, -14), S(-34, 10), S(-1, 4), S(-35, 17), S(-52, 5), S(18, 4), S(48, -2), S(2, 6), S(-51, 0), S(-18, 14), S(31, -0), S(37, 2), S(27, -0), S(31, 0), S(57, 3), S(33, 7), S(4, 14), S(-0, 5), S(12, 12), S(12, 15), S(51, 7), S(35, 10), S(30, 8), S(13, 3), S(8, 10), S(5, -2), S(20, 4), S(12, 13), S(34, 13), S(39, -1), S(9, 6), S(14, -1), S(22, -6), S(13, -8), S(31, -1), S(29, 7), S(16, 7), S(24, 12), S(46, -5), S(31, -1), S(24, -13), S(20, -10), S(40, -21), S(30, -7), S(16, 3), S(27, 1), S(37, -3), S(61, -26), S(19, -27), S(-20, -10), S(20, -2), S(13, 2), S(5, 4), S(9, 3), S(10, 6), S(-29, 8), S(-5, -11)};
+constexpr Score ROOK_TABLE[] = {S(10, 28), S(24, 21), S(-14, 37), S(41, 19), S(44, 21), S(-14, 31), S(2, 28), S(17, 22), S(12, 27), S(6, 31), S(50, 19), S(55, 17), S(80, -2), S(87, 6), S(-1, 31), S(36, 18), S(-26, 27), S(-7, 26), S(-7, 23), S(-4, 24), S(-27, 25), S(48, 4), S(77, -0), S(8, 10), S(-34, 24), S(-29, 22), S(-17, 32), S(-4, 17), S(-7, 19), S(32, 12), S(-4, 11), S(-20, 20), S(-40, 22), S(-31, 24), S(-23, 25), S(-19, 20), S(-0, 10), S(-3, 9), S(21, 2), S(-22, 8), S(-32, 12), S(-18, 16), S(-13, 7), S(-15, 12), S(5, 3), S(17, -1), S(12, 3), S(-11, -4), S(-22, 6), S(-7, 8), S(-14, 14), S(1, 13), S(14, 1), S(29, -2), S(15, -4), S(-43, 11), S(8, 9), S(7, 12), S(14, 11), S(26, 4), S(31, -2), S(36, 0), S(-7, 10), S(12, -9)};
+constexpr Score QUEEN_TABLE[] = {S(-30, 3), S(-27, 49), S(-8, 42), S(2, 37), S(113, -8), S(110, -14), S(78, -8), S(57, 38), S(-30, 1), S(-58, 30), S(-21, 40), S(-20, 57), S(-54, 86), S(59, 18), S(20, 39), S(64, 13), S(-3, -22), S(-22, 2), S(6, -17), S(-19, 56), S(25, 36), S(77, 15), S(62, 17), S(67, 22), S(-37, 25), S(-28, 17), S(-25, 14), S(-22, 23), S(-6, 46), S(3, 44), S(-4, 78), S(0, 71), S(2, -28), S(-31, 29), S(-0, -7), S(-11, 33), S(2, 7), S(4, 22), S(2, 54), S(5, 42), S(-11, 11), S(16, -40), S(4, -3), S(18, -34), S(13, -8), S(16, 9), S(22, 24), S(12, 43), S(-17, -12), S(13, -36), S(30, -39), S(30, -40), S(41, -47), S(44, -38), S(17, -37), S(32, -30), S(18, -32), S(17, -47), S(27, -42), S(35, -7), S(16, -8), S(-1, -17), S(-5, -6), S(-37, -29)};
+constexpr Score KING_TABLE[] = {S(-109, -78), S(188, -74), S(180, -57), S(102, -46), S(-151, 13), S(-84, 31), S(50, -6), S(64, -29), S(228, -60), S(67, 4), S(37, 8), S(113, -2), S(30, 14), S(43, 34), S(-34, 30), S(-150, 38), S(75, -6), S(73, 11), S(97, 10), S(15, 16), S(37, 14), S(110, 36), S(134, 28), S(-10, 11), S(11, -19), S(-14, 24), S(9, 28), S(-54, 40), S(-58, 39), S(-60, 47), S(-23, 35), S(-97, 16), S(-90, -9), S(14, -5), S(-74, 37), S(-136, 50), S(-141, 55), S(-95, 42), S(-89, 25), S(-105, 1), S(-4, -26), S(-17, 0), S(-57, 23), S(-98, 38), S(-96, 42), S(-83, 34), S(-34, 14), S(-50, -4), S(5, -38), S(9, -13), S(-41, 16), S(-101, 28), S(-77, 28), S(-54, 19), S(2, -4), S(11, -27), S(-21, -67), S(43, -50), S(12, -27), S(-95, 2), S(-14, -21), S(-50, -5), S(30, -38), S(19, -64)};
+constexpr Score OPEN_FILE_BONUS[] = {S(0, 0), S(0, 0), S(0, 0), S(59, -8), S(0, 0), S(0, 0)};
+constexpr Score SEMI_OPEN_FILE_BONUS[] = {S(0, 0), S(0, 0), S(0, 0), S(19, 4), S(0, 0), S(0, 0)};
 constexpr Score PASSED_PAWN_BONUS = S(1, 19);
 constexpr Score BLOCKED_PASSED_PAWN_PENALTY = S(5, -20);
-constexpr Score ISOLATED_PAWN_PENALTY = S(-23, -13);
-
-constexpr Score BISHOP_PAIR_BONUS = S(32, 53);
-
+constexpr Score ISOLATED_PAWN_PENALTY = S(-24, -13);
+constexpr Score BISHOP_PAIR_BONUS = S(32, 54);
 constexpr Score KNIGHT_MOBILITY = S(1, 0);
 constexpr Score BISHOP_MOBILITY = S(6, 3);
-constexpr Score ROOK_MOBILITY = S(8, 3);
+constexpr Score ROOK_MOBILITY = S(5, 3);
 constexpr Score QUEEN_MOBILITY = S(2, 8);
 
 // TODO: This kinda slow. Like 8 conditionals when it could just be PST[COLOR][TYPE][SQUARE]
